using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public struct AnimationStruct
{
    public const string Idle = "Idle";
    public const string Run = "Run";
    public const string Jump = "Jump";
    public const string Fall = "Fall";
    public const string Death = "Death";
}